✨ add: 基礎代謝量を求めるKさんのロジックを追加
